usando el metodo 'where' con dos condiciones

--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -37,12 +37,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Molina</td>\n",
-       "      <td>Antonio</td>\n",
-       "      <td>Basquet</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>1.81</td>\n",
-       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -64,21 +64,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Castillo</td>\n",
-       "      <td>Daniel</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>1.61</td>\n",
-       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Garrido</td>\n",
-       "      <td>Luis</td>\n",
-       "      <td>Voley</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>1.86</td>\n",
-       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -100,12 +100,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Morales</td>\n",
-       "      <td>Jorge</td>\n",
-       "      <td>Karaoke</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>1.65</td>\n",
-       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -118,30 +118,30 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Reyes</td>\n",
+       "      <td>Cintia</td>\n",
+       "      <td>Musica</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Prado</td>\n",
+       "      <td>Ana</td>\n",
+       "      <td>Reposteria</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>1.71</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>Chavez</td>\n",
-       "      <td>Jose</td>\n",
-       "      <td>Futbol</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>1.77</td>\n",
-       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -154,12 +154,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Moreno</td>\n",
+       "      <td>Julia</td>\n",
+       "      <td>Basquet</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>1.76</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -235,21 +235,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Mejia</td>\n",
+       "      <td>Jesica</td>\n",
+       "      <td>Voley</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>1.74</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Serrano</td>\n",
+       "      <td>Ursula</td>\n",
+       "      <td>Judo</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
@@ -271,12 +271,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
-       "      <td>Fernandez</td>\n",
-       "      <td>Miguel</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>1.67</td>\n",
-       "      <td>M</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -298,49 +298,49 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Delgado</td>\n",
+       "      <td>Vanesa</td>\n",
+       "      <td>Basquet</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>1.77</td>\n",
+       "      <td>F</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Apellido   Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
-       "0      Molina  Antonio           Basquet      82.0         1.81    M\n",
-       "1         NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "2         NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "3    Castillo   Daniel           Ajedrez      75.0         1.61    M\n",
-       "4     Garrido     Luis             Voley      74.0         1.86    M\n",
-       "5      Medina    Laura            Futbol      71.0         1.76    F\n",
-       "6         NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "7     Morales    Jorge           Karaoke      77.0         1.65    M\n",
-       "8      Castro    Tania              Judo      71.0         1.73    F\n",
-       "9         NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "10        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "11     Chavez     Jose            Futbol      72.0         1.77    M\n",
-       "12        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "13        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "14        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "15        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "16        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "17        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "18        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "19        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "20        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "21        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "22        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "23        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "24        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "25        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "26  Fernandez   Miguel           Ajedrez      72.0         1.67    M\n",
-       "27        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "28        NaN      NaN               NaN       NaN          NaN  NaN\n",
-       "29        NaN      NaN               NaN       NaN          NaN  NaN"
+       "   Apellido  Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
+       "0       NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "1       NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "2       NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "3       NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "4       NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "5    Medina   Laura            Futbol      71.0         1.76    F\n",
+       "6       NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "7       NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "8    Castro   Tania              Judo      71.0         1.73    F\n",
+       "9     Reyes  Cintia            Musica      62.0         1.72    F\n",
+       "10    Prado     Ana        Reposteria      68.0         1.71    F\n",
+       "11      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "12      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "13   Moreno   Julia           Basquet      68.0         1.76    F\n",
+       "14      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "15      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "16      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "17      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "18      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "19      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "20      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "21      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "22    Mejia  Jesica             Voley      68.0         1.74    F\n",
+       "23  Serrano  Ursula              Judo      64.0         1.72    F\n",
+       "24      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "25      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "26      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "27      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "28      NaN     NaN               NaN       NaN          NaN  NaN\n",
+       "29  Delgado  Vanesa           Basquet      63.0         1.77    F"
       ]
      },
      "execution_count": 3,
@@ -376,11 +376,15 @@
     "df\n",
     "\n",
     "\"\"\" El metodo where sirve para filtrar datos y nos devolvera un nuevo dataframe segun la condicion o condiciones que le pidamos; \n",
-    "    solo las filas en las cuales se cumplan la condicion o condiciones nos imprimira sus respectivos valores, y los que no se\n",
-    "    rellenaran con valores NaN\n",
-    "    En este caso le pedimos que nos devuelva un nuevo dataframe con los datos de los alumnos cuyo peso sea mayor a 70 kg\"\"\"\n",
-    "dataframe_filtrado = df.where(df['Peso(Kg)'] > 70 ) \n",
-    "dataframe_filtrado\n",
+    "    solo las filas en las cuales se cumplan la condicion o condiciones nos imprimira sus respectivos valores, y los que no, se\n",
+    "    rellenaran con valores NaN.\n",
+    "    En este otro caso le pedimos que nos devuelva un nuevo dataframe con las siguientes dos condiciones; primero los estudiantes\n",
+    "    cuya estatura sea mayor a 1.70 m y (notese el operador logico '&' como segunda condicion que sea de sexo femenino ('F') \n",
+    "    osea mujeres; es decir deben cumplir estas dos condiciones a la vez).\"\"\"\n",
+    "dataframe_filtrado1 = df.where((df['Estatura(m)'] > 1.70) & (df['Sexo'] == 'F' )) \n",
+    "dataframe_filtrado1\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
