usando el metodo 'query'

--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -36,314 +36,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Medina</td>\n",
-       "      <td>Laura</td>\n",
-       "      <td>Futbol</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>1.76</td>\n",
-       "      <td>F</td>\n",
+       "      <td>Castillo</td>\n",
+       "      <td>Daniel</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "      <td>75</td>\n",
+       "      <td>1.61</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Castro</td>\n",
-       "      <td>Tania</td>\n",
-       "      <td>Judo</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>1.73</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Reyes</td>\n",
-       "      <td>Cintia</td>\n",
-       "      <td>Musica</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Prado</td>\n",
-       "      <td>Ana</td>\n",
-       "      <td>Reposteria</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>1.71</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Moreno</td>\n",
-       "      <td>Julia</td>\n",
-       "      <td>Basquet</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>1.76</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Mejia</td>\n",
-       "      <td>Jesica</td>\n",
-       "      <td>Voley</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>1.74</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Serrano</td>\n",
-       "      <td>Ursula</td>\n",
-       "      <td>Judo</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>1.72</td>\n",
-       "      <td>F</td>\n",
+       "      <td>Navarro</td>\n",
+       "      <td>Julio</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "      <td>62</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Jimenez</td>\n",
+       "      <td>Luis</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Fernandez</td>\n",
+       "      <td>Miguel</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1.67</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Delgado</td>\n",
-       "      <td>Vanesa</td>\n",
-       "      <td>Basquet</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>1.77</td>\n",
-       "      <td>F</td>\n",
+       "      <td>Ramos</td>\n",
+       "      <td>Raul</td>\n",
+       "      <td>Ajedrez</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Apellido  Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
-       "0       NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "1       NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "2       NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "3       NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "4       NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "5    Medina   Laura            Futbol      71.0         1.76    F\n",
-       "6       NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "7       NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "8    Castro   Tania              Judo      71.0         1.73    F\n",
-       "9     Reyes  Cintia            Musica      62.0         1.72    F\n",
-       "10    Prado     Ana        Reposteria      68.0         1.71    F\n",
-       "11      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "12      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "13   Moreno   Julia           Basquet      68.0         1.76    F\n",
-       "14      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "15      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "16      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "17      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "18      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "19      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "20      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "21      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "22    Mejia  Jesica             Voley      68.0         1.74    F\n",
-       "23  Serrano  Ursula              Judo      64.0         1.72    F\n",
-       "24      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "25      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "26      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "27      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "28      NaN     NaN               NaN       NaN          NaN  NaN\n",
-       "29  Delgado  Vanesa           Basquet      63.0         1.77    F"
+       "     Apellido  Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
+       "3    Castillo  Daniel           Ajedrez        75         1.61    M\n",
+       "6     Navarro   Julio           Ajedrez        62         1.68    M\n",
+       "24    Jimenez    Luis           Ajedrez        70         1.65    M\n",
+       "26  Fernandez  Miguel           Ajedrez        72         1.67    M\n",
+       "27      Ramos    Raul           Ajedrez        70         1.64    M"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,13 +125,14 @@
     "df = pd.DataFrame(datos, columns=columnas)\n",
     "df\n",
     "\n",
-    "\"\"\" El metodo where sirve para filtrar datos y nos devolvera un nuevo dataframe segun la condicion o condiciones que le pidamos; \n",
-    "    solo las filas en las cuales se cumplan la condicion o condiciones nos imprimira sus respectivos valores, y los que no, se\n",
-    "    rellenaran con valores NaN.\n",
-    "    En este otro caso le pedimos que nos devuelva un nuevo dataframe con las siguientes dos condiciones; primero los estudiantes\n",
-    "    cuya estatura sea mayor a 1.70 m y (notese el operador logico '&' como segunda condicion que sea de sexo femenino ('F') \n",
-    "    osea mujeres; es decir deben cumplir estas dos condiciones a la vez).\"\"\"\n",
-    "dataframe_filtrado1 = df.where((df['Estatura(m)'] > 1.70) & (df['Sexo'] == 'F' )) \n",
+    "\"\"\" El metodo query sirve para filtrar datos y nos devolvera un nuevo dataframe segun la condicion o condiciones que le pidamos; \n",
+    "    solo las filas en las cuales se cumplan la condicion o condiciones nos imprimira sus respectivos valores, y los que no, no se\n",
+    "    imprimira nada. \n",
+    "    En este caso le pedimos que nos devuelva un nuevo dataframe en la cual la la columna \"Aficion principal\" sea \"Ajedrez\",\n",
+    "    notese que el nombre de la columna \"Aficion principal\" esta encerrado con comillas invertidas (`) y esto se debe a que el nombre \n",
+    "    de la columna \"Aficion principal\" tiene un espacio en blanco; de lo contrario no seria necesario el uso de las comillas\n",
+    "    invertidas (`)\"\"\"\n",
+    "dataframe_filtrado1 = df.query('`Aficion principal` == \"Ajedrez\"')\n",
     "dataframe_filtrado1\n",
     "\n",
     "\n",
