subiendo otro ejemplo del uso del metodo 'query'

--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,48 +36,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Castillo</td>\n",
-       "      <td>Daniel</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>75</td>\n",
-       "      <td>1.61</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Navarro</td>\n",
-       "      <td>Julio</td>\n",
-       "      <td>Ajedrez</td>\n",
+       "      <th>14</th>\n",
+       "      <td>Escobar</td>\n",
+       "      <td>Pedro</td>\n",
+       "      <td>Karaoke</td>\n",
        "      <td>62</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Jimenez</td>\n",
-       "      <td>Luis</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1.65</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Fernandez</td>\n",
-       "      <td>Miguel</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>72</td>\n",
-       "      <td>1.67</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Ramos</td>\n",
-       "      <td>Raul</td>\n",
-       "      <td>Ajedrez</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1.64</td>\n",
+       "      <td>1.58</td>\n",
        "      <td>M</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -85,15 +49,11 @@
        "</div>"
       ],
       "text/plain": [
-       "     Apellido  Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
-       "3    Castillo  Daniel           Ajedrez        75         1.61    M\n",
-       "6     Navarro   Julio           Ajedrez        62         1.68    M\n",
-       "24    Jimenez    Luis           Ajedrez        70         1.65    M\n",
-       "26  Fernandez  Miguel           Ajedrez        72         1.67    M\n",
-       "27      Ramos    Raul           Ajedrez        70         1.64    M"
+       "   Apellido Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
+       "14  Escobar  Pedro           Karaoke        62         1.58    M"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,13 +86,11 @@
     "df\n",
     "\n",
     "\"\"\" El metodo query sirve para filtrar datos y nos devolvera un nuevo dataframe segun la condicion o condiciones que le pidamos; \n",
-    "    solo las filas en las cuales se cumplan la condicion o condiciones nos imprimira sus respectivos valores, y los que no, no se\n",
-    "    imprimira nada. \n",
-    "    En este caso le pedimos que nos devuelva un nuevo dataframe en la cual la la columna \"Aficion principal\" sea \"Ajedrez\",\n",
-    "    notese que el nombre de la columna \"Aficion principal\" esta encerrado con comillas invertidas (`) y esto se debe a que el nombre \n",
-    "    de la columna \"Aficion principal\" tiene un espacio en blanco; de lo contrario no seria necesario el uso de las comillas\n",
-    "    invertidas (`)\"\"\"\n",
-    "dataframe_filtrado1 = df.query('`Aficion principal` == \"Ajedrez\"')\n",
+    "    solo las filas en las cuales se cumplan la condicion o condiciones nos imprimira sus respectivos valores, y los que no, \n",
+    "    no se imprimira nada. \n",
+    "    En este otro caso le pedimos que nos devuelva un nuevo dataframe en la cual la columna \"Apellido\" sea \"Escobar\",\n",
+    "    en cuyo caso nos devolvera una sola fila, ya que es la unica que contiene dicho valor pedido\"\"\"\n",
+    "dataframe_filtrado1 = df.query('Apellido == \"Escobar\"')\n",
     "dataframe_filtrado1\n",
     "\n",
     "\n",
