uso del metodo 'query' para filtrado de datos con mas de una condicion

--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -2,60 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Apellido</th>\n",
-       "      <th>Nombre</th>\n",
-       "      <th>Aficion principal</th>\n",
-       "      <th>Peso(Kg)</th>\n",
-       "      <th>Estatura(m)</th>\n",
-       "      <th>Sexo</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Escobar</td>\n",
-       "      <td>Pedro</td>\n",
-       "      <td>Karaoke</td>\n",
-       "      <td>62</td>\n",
-       "      <td>1.58</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Apellido Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
-       "14  Escobar  Pedro           Karaoke        62         1.58    M"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Apellido   Nombre Aficion principal  Peso(Kg)  Estatura(m) Sexo\n",
+      "0      Molina  Antonio           Basquet        82         1.81    M\n",
+      "3    Castillo   Daniel           Ajedrez        75         1.61    M\n",
+      "4     Garrido     Luis             Voley        74         1.86    M\n",
+      "5      Medina    Laura            Futbol        71         1.76    F\n",
+      "6     Navarro    Julio           Ajedrez        62         1.68    M\n",
+      "7     Morales    Jorge           Karaoke        77         1.65    M\n",
+      "8      Castro    Tania              Judo        71         1.73    F\n",
+      "9       Reyes   Cintia            Musica        62         1.72    F\n",
+      "10      Prado      Ana        Reposteria        68         1.71    F\n",
+      "11     Chavez     Jose            Futbol        72         1.77    M\n",
+      "12       Vega   Carlos       Informatica        65         1.60    M\n",
+      "13     Moreno    Julia           Basquet        68         1.76    F\n",
+      "14    Escobar    Pedro           Karaoke        62         1.58    M\n",
+      "15   Alvarado    Ester            Musica        66         1.69    F\n",
+      "16    Zegarra  Alberto              Judo        65         1.67    M\n",
+      "18      Borja    Pablo            Futbol        70         1.73    M\n",
+      "20      Gomez    Jorge           Lectura        66         1.62    M\n",
+      "22      Mejia   Jesica             Voley        68         1.74    F\n",
+      "23    Serrano   Ursula              Judo        64         1.72    F\n",
+      "24    Jimenez     Luis           Ajedrez        70         1.65    M\n",
+      "25    Vazquez     Jose             Voley        67         1.79    M\n",
+      "26  Fernandez   Miguel           Ajedrez        72         1.67    M\n",
+      "27      Ramos     Raul           Ajedrez        70         1.64    M\n",
+      "29    Delgado   Vanesa           Basquet        63         1.77    F\n"
+     ]
     }
    ],
    "source": [
@@ -88,10 +67,15 @@
     "\"\"\" El metodo query sirve para filtrar datos y nos devolvera un nuevo dataframe segun la condicion o condiciones que le pidamos; \n",
     "    solo las filas en las cuales se cumplan la condicion o condiciones nos imprimira sus respectivos valores, y los que no, \n",
     "    no se imprimira nada. \n",
-    "    En este otro caso le pedimos que nos devuelva un nuevo dataframe en la cual la columna \"Apellido\" sea \"Escobar\",\n",
-    "    en cuyo caso nos devolvera una sola fila, ya que es la unica que contiene dicho valor pedido\"\"\"\n",
-    "dataframe_filtrado1 = df.query('Apellido == \"Escobar\"')\n",
-    "dataframe_filtrado1\n",
+    "    En este otro caso le pedimos que nos devuelva un nuevo dataframe en la cual la columna \"Estatura(m)\" tiene al final un \n",
+    "    parentesis y dentro de ellas la letra m, prefijo que indica metros. Para que la columna Estatura(m) pueda ser leida debido\n",
+    "    a esto debe ser encerrada entre comillas inclinadas (`), al igual que en el caso si es que el nombre de la columna tiene\n",
+    "    espacios en blanco. Ademas le pedimos todos los alumnos con Sexo 'M' (masculino) unidos por la conjuncion logica (|) que \n",
+    "    significa 'o' es decir basta que cualquiera de las dos condiciones se cumpla para que la condicion resultante sea\n",
+    "    verdadera.\"\"\"\n",
+    "\n",
+    "dataframe_filtrado1 = df.query(\"`Estatura(m)` > 1.68  |  Sexo == 'M'\")\n",
+    "print(dataframe_filtrado1)\n",
     "\n",
     "\n",
     "\n",
