usando el metodo sort_values, en este caso con respecto a dos columnas: 'Apellido' y 'Nombre'

--- a/alumnos1.ipynb
+++ b/alumnos1.ipynb
@@ -148,17 +148,6 @@
        "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Diaz</td>\n",
-       "      <td>Juan</td>\n",
-       "      <td>5</td>\n",
-       "      <td>A</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2</td>\n",
-       "      <td>9.6</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>36</th>\n",
        "      <td>Diaz</td>\n",
        "      <td>Elena</td>\n",
@@ -168,6 +157,17 @@
        "      <td>0</td>\n",
        "      <td>13.0</td>\n",
        "      <td>F</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Diaz</td>\n",
+       "      <td>Juan</td>\n",
+       "      <td>5</td>\n",
+       "      <td>A</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>M</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -515,8 +515,8 @@
        "4   Castillo   Daniel      1    B    12                 0           12.1    M\n",
        "21    Castro    Tania      2    A    12                 1           11.4    F\n",
        "18      Cruz     Jose      2    B    13                 1           11.6    M\n",
-       "11      Diaz     Juan      5    A    16                 2            9.6    M\n",
        "36      Diaz    Elena      3    A    14                 0           13.0    F\n",
+       "11      Diaz     Juan      5    A    16                 2            9.6    M\n",
        "25   Escobar    Pedro      1    A    12                 2           10.5    M\n",
        "41  Espinoza  Claudia      1    A    12                 0           12.1    F\n",
        "16    Flores    Maria      1    B    12                 0           13.5    F\n",
@@ -609,10 +609,10 @@
     "df2 = pd.DataFrame(datos2, columns=columnas2)\n",
     "df2\n",
     "\n",
-    "\"\"\"\"ordena el nuevo dataframe de acuerdo a la columna 'Apellido' (osea alfabeticamente), notese que para los alumnos\n",
-    "    Diaz Juan y Diaz Elena, primero deberia ir Diaz Elena y despues Diaz Juan y no al reves como pasa aca, esto ocurre \n",
-    "    porque solo lo hemos ordenado por la columna 'Apellido'\"\"\"\n",
-    "nuevo_df2 = df2.sort_values(by='Apellido')\n",
+    "\"\"\"\"Ahora en este nuevo dataframe hemos ordenado mediante el metodo sort_values() ya no solo de acuerdo a una sola\n",
+    "    columna ('Apellido'), sino de acuerdo a dos columnas ('Apellido' y 'Nombre'); por lo tanto el orden en los alumnos\n",
+    "    Diaz Juan y Diaz Elena cambio a Diaz Elena primero y Diaz Juan despues\"\"\"\n",
+    "nuevo_df2 = df2.sort_values(by=['Apellido', 'Nombre'])\n",
     "nuevo_df2\n",
     "\n",
     "\n",
